# MGiC_Resit1_Pacman

./: .clang-format  .gitignore  CMakeLists.txt  README.md
